# notes-rag

./: .markdownlint.yaml  AGENTS.md  README.md  justfile  mise.toml  pinecone_tracked_files.txt  pinecone_tracked_files_notes-v8.txt  pinecone_tracked_files_notes-v9.txt  pinecone_tracked_files_v7.txt  pyproject.toml  requirements.txt
.github/workflows/: update-vectors.yml
src/: ai_notes_indexer.py  ai_request.py  config.py  evaluator.py  evaluator_prompt.py  list_chunker_test.py  markdown_chunker.py  markdown_chunker_list_test.py  markdown_chunker_test.py  tracked_file_handler.py  tracked_file_handler_test.py
